src/test/resources/mutation/error/serviceAndMutationTypeNotSet/schema.graphqls
type Query {
  # Dummy query, since the schema insists that there must be at least one.
  i(id: ID): ID! @notGenerated
}

type Mutation {
  endrePerson(id: ID!): ID!
}
